--- a/wp-content/plugins/flamingo/languages/flamingo-nb_NO.po
+++ b/wp-content/plugins/flamingo/languages/flamingo-nb_NO.po
@@ -1,11 +1,10 @@
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Flamingo\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-08-02 14:56+0900\n"
-"PO-Revision-Date: 2014-04-03 00:21+0900\n"
-"Last-Translator: Takayuki Miyoshi <takayukister@gmail.com>\n"
+"POT-Creation-Date: 2014-04-03 00:20+0900\n"
+"PO-Revision-Date: 2014-10-24 08:47+0100\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -13,333 +12,335 @@ msgstr ""
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_c\n"
 "X-Poedit-Basepath: ../..\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Poedit 1.8.1\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 1.6.5\n"
+"Language: nb_NO\n"
 "X-Poedit-SearchPath-0: flamingo\n"
 
 #: flamingo/admin/admin.php:16 flamingo/admin/admin.php:22
 #: flamingo/admin/admin.php:284
 msgid "Flamingo Address Book"
-msgstr ""
+msgstr "Flamingo adressebok"
 
 #: flamingo/admin/admin.php:17
 msgid "Flamingo"
-msgstr ""
+msgstr "Flamingo"
 
 #: flamingo/admin/admin.php:23
 msgid "Address Book"
-msgstr ""
+msgstr "Adressebok"
 
 #: flamingo/admin/admin.php:30 flamingo/includes/class-inbound-message.php:26
 msgid "Flamingo Inbound Messages"
-msgstr ""
+msgstr "Flamingo innkommende meldinger"
 
 #: flamingo/admin/admin.php:31 flamingo/admin/admin.php:600
 msgid "Inbound Messages"
-msgstr ""
+msgstr "Innkommende meldinger."
 
 #: flamingo/admin/admin.php:78
 msgid "Contact updated."
-msgstr ""
+msgstr "Kontakt oppdatert"
 
 #: flamingo/admin/admin.php:80
 msgid "Contact deleted."
-msgstr ""
+msgstr "Kontakt slettet."
 
 #: flamingo/admin/admin.php:82
 msgid "Messages trashed."
-msgstr ""
+msgstr "Melding flyttet til papirkurv."
 
 #: flamingo/admin/admin.php:84
 msgid "Messages restored."
-msgstr ""
+msgstr "Melding gjenoprettet."
 
 #: flamingo/admin/admin.php:86
 msgid "Messages deleted."
-msgstr ""
+msgstr "Melding slettet."
 
 #: flamingo/admin/admin.php:88
 msgid "Messages got marked as spam."
-msgstr ""
+msgstr "Meldningen ble market som spam."
 
 #: flamingo/admin/admin.php:90
 msgid "Messages got marked as not spam."
-msgstr ""
+msgstr "Meldingen ble markert som ikke spam."
 
 #: flamingo/admin/admin.php:92
 msgid "Messages updated."
-msgstr ""
+msgstr "Meldinger oppdatert."
 
 #: flamingo/admin/admin.php:119 flamingo/admin/admin.php:657
 msgid "You are not allowed to edit this item."
-msgstr ""
+msgstr "Du har ikke tillatelse til å redigere dette elementet."
 
 #: flamingo/admin/admin.php:158 flamingo/admin/admin.php:407
 msgid "You are not allowed to delete this item."
-msgstr ""
+msgstr "Du har ikke tillatelse til å slette dette elementet."
 
 #: flamingo/admin/admin.php:161 flamingo/admin/admin.php:410
 msgid "Error in deleting."
-msgstr ""
+msgstr "Feil ved sletting."
 
 #: flamingo/admin/admin.php:186
 #: flamingo/admin/includes/class-contacts-list-table.php:11
 msgid "Email"
-msgstr ""
+msgstr "E-post"
 
 #: flamingo/admin/admin.php:186 flamingo/admin/includes/meta-boxes.php:142
 msgid "Full name"
-msgstr ""
+msgstr "Fullt navn"
 
 #: flamingo/admin/admin.php:187 flamingo/admin/includes/meta-boxes.php:147
 msgid "First name"
-msgstr ""
+msgstr "Fornavn"
 
 #: flamingo/admin/admin.php:187 flamingo/admin/includes/meta-boxes.php:152
 msgid "Last name"
-msgstr ""
+msgstr "Etternavn"
 
 #: flamingo/admin/admin.php:243 flamingo/admin/admin.php:562
 #: flamingo/admin/includes/meta-boxes.php:184
 msgid "Save"
-msgstr ""
+msgstr "Lagre"
 
 #: flamingo/admin/admin.php:246
 #: flamingo/admin/includes/class-contacts-list-table.php:13
 msgid "Tags"
-msgstr ""
+msgstr "Etiketter"
 
 #: flamingo/admin/admin.php:249
 #: flamingo/admin/includes/class-contacts-list-table.php:12
 msgid "Name"
-msgstr ""
+msgstr "Navn"
 
 #: flamingo/admin/admin.php:262
 msgid "Contacts"
-msgstr ""
+msgstr "Kontakter"
 
 #: flamingo/admin/admin.php:288 flamingo/admin/admin.php:604
 #: flamingo/admin/admin.php:716
 #, php-format
 msgid "Search results for &#8220;%s&#8221;"
-msgstr ""
+msgstr "Søkresultat for &#8220;%s&#8221;"
 
 #: flamingo/admin/admin.php:297
 msgid "Search Contacts"
-msgstr ""
+msgstr "Søk kontakter"
 
 #: flamingo/admin/admin.php:338
 msgid "You are not allowed to move this item to the Trash."
-msgstr ""
+msgstr "Du har ikke tillatelser til å legge elementet i papirkurven."
 
 #: flamingo/admin/admin.php:341
 msgid "Error in moving to Trash."
-msgstr ""
+msgstr "Feil: Kunne ikke flytte element til papirkurv."
 
 #: flamingo/admin/admin.php:368
 msgid "You are not allowed to restore this item from the Trash."
 msgstr ""
+"Du har ikke tillatelse til å gjenopprette dette elementet fra papirkurven."
 
 #: flamingo/admin/admin.php:371
 msgid "Error in restoring from Trash."
-msgstr ""
+msgstr "Feil: Kunne ikke gjenopprette fra papirkurv."
 
 #: flamingo/admin/admin.php:437
 msgid "You are not allowed to spam this item."
-msgstr ""
+msgstr "Du har ikke tillatelse til å markere dette som spam."
 
 #: flamingo/admin/admin.php:465
 msgid "You are not allowed to unspam this item."
-msgstr ""
+msgstr "Du har ikke tillatelse til å markere dette som ikke spam."
 
 #: flamingo/admin/admin.php:533 flamingo/admin/edit-inbound-form.php:42
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:17
-#: flamingo/admin/includes/class-outbound-messages-list-table.php:15
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:14
+#: flamingo/admin/includes/class-outbound-messages-list-table.php:13
 msgid "Date"
-msgstr ""
+msgstr "Dato"
 
 #: flamingo/admin/admin.php:565
 msgid "Fields"
-msgstr ""
+msgstr "Felter"
 
 #: flamingo/admin/admin.php:578 flamingo/admin/admin.php:690
 msgid "Messages"
-msgstr ""
+msgstr "Meldinger"
 
 #: flamingo/admin/admin.php:615 flamingo/admin/admin.php:727
 msgid "Search Messages"
-msgstr ""
+msgstr "Søk i meldinger"
 
 #: flamingo/admin/admin.php:677
 msgid "Send"
-msgstr ""
+msgstr "Send"
 
 #: flamingo/admin/admin.php:712
 msgid "Outbound Messages"
-msgstr ""
+msgstr "Utgående meldinger"
 
 #: flamingo/admin/edit-contact-form.php:17
 msgid "Edit Contact"
-msgstr ""
+msgstr "Endre kontakt"
 
 #: flamingo/admin/edit-contact-form.php:43
 msgid "Enter email here"
-msgstr ""
+msgstr "Skriv inn e-post her"
 
 #: flamingo/admin/edit-inbound-form.php:17
 msgid "Inbound Message"
-msgstr ""
+msgstr "Innkommende melding"
 
 #: flamingo/admin/edit-inbound-form.php:47
 #: flamingo/admin/edit-outbound-form.php:61
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:14
-#: flamingo/admin/includes/class-outbound-messages-list-table.php:13
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:11
+#: flamingo/admin/includes/class-outbound-messages-list-table.php:11
 msgid "Subject"
-msgstr ""
+msgstr "Emne"
 
 #: flamingo/admin/edit-inbound-form.php:52
 #: flamingo/admin/edit-outbound-form.php:56
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:15
-#: flamingo/admin/includes/class-outbound-messages-list-table.php:14
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:12
+#: flamingo/admin/includes/class-outbound-messages-list-table.php:12
 msgid "From"
-msgstr ""
+msgstr "Fra"
 
 #: flamingo/admin/edit-outbound-form.php:19
 msgid "Compose a Message"
-msgstr ""
+msgstr "Lag en ny melding"
 
 #: flamingo/admin/edit-outbound-form.php:21
 msgid "Outbound Message"
-msgstr ""
+msgstr "Utgående melding"
 
 #: flamingo/admin/edit-outbound-form.php:48
 msgid "To"
-msgstr ""
+msgstr "Til"
 
 #: flamingo/admin/edit-outbound-form.php:66
 msgid "Body"
-msgstr ""
+msgstr "Innhold"
 
 #: flamingo/admin/includes/class-contacts-list-table.php:14
 msgid "History"
-msgstr ""
+msgstr "Historie"
 
 #: flamingo/admin/includes/class-contacts-list-table.php:15
 msgid "Last Contact"
-msgstr ""
+msgstr "Sist kontakt"
 
-#: flamingo/admin/includes/class-contacts-list-table.php:85
+#: flamingo/admin/includes/class-contacts-list-table.php:82
 #: flamingo/admin/includes/meta-boxes.php:11
 msgid "Delete"
-msgstr ""
+msgstr "Slett"
 
-#: flamingo/admin/includes/class-contacts-list-table.php:109
+#: flamingo/admin/includes/class-contacts-list-table.php:106
 msgid "View all tags"
-msgstr ""
+msgstr "Vis alle etiketter"
+
+#: flamingo/admin/includes/class-contacts-list-table.php:112
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:212
+#: flamingo/admin/includes/class-outbound-messages-list-table.php:153
+msgid "Filter"
+msgstr "Filter"
 
 #: flamingo/admin/includes/class-contacts-list-table.php:115
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:220
-#: flamingo/admin/includes/class-outbound-messages-list-table.php:159
-msgid "Filter"
-msgstr ""
-
-#: flamingo/admin/includes/class-contacts-list-table.php:118
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:225
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:217
 msgid "Export"
-msgstr ""
+msgstr "Eksporter"
+
+#: flamingo/admin/includes/class-contacts-list-table.php:138
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:252
+#: flamingo/admin/includes/class-outbound-messages-list-table.php:187
+msgid "Edit"
+msgstr "Endre"
 
 #: flamingo/admin/includes/class-contacts-list-table.php:142
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:261
-#: flamingo/admin/includes/class-outbound-messages-list-table.php:194
-msgid "Edit"
-msgstr ""
-
-#: flamingo/admin/includes/class-contacts-list-table.php:146
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:280
-#: flamingo/admin/includes/class-outbound-messages-list-table.php:198
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:271
+#: flamingo/admin/includes/class-outbound-messages-list-table.php:191
 #, php-format
 msgid "Edit &#8220;%s&#8221;"
-msgstr ""
+msgstr "Endre &#8220;%s&#8221;"
 
-#: flamingo/admin/includes/class-contacts-list-table.php:158
+#: flamingo/admin/includes/class-contacts-list-table.php:154
 msgid "No Tags"
-msgstr ""
+msgstr "Ingen etiketter"
 
-#: flamingo/admin/includes/class-contacts-list-table.php:187
+#: flamingo/admin/includes/class-contacts-list-table.php:183
 msgid "User"
-msgstr ""
+msgstr "Bruker"
 
-#: flamingo/admin/includes/class-contacts-list-table.php:200
+#: flamingo/admin/includes/class-contacts-list-table.php:196
 #, php-format
 msgid "Comment (%d)"
-msgstr ""
+msgstr "Kommentar (%d)"
 
-#: flamingo/admin/includes/class-contacts-list-table.php:239
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:332
-#: flamingo/admin/includes/class-outbound-messages-list-table.php:214
+#: flamingo/admin/includes/class-contacts-list-table.php:235
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:323
+#: flamingo/admin/includes/class-outbound-messages-list-table.php:207
 #: flamingo/includes/class-inbound-message.php:132
 #: flamingo/includes/class-outbound-message.php:80
 msgid "Y/m/d g:i:s A"
-msgstr ""
+msgstr "Y/m/d g:i:s A"
 
-#: flamingo/admin/includes/class-contacts-list-table.php:246
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:339
-#: flamingo/admin/includes/class-outbound-messages-list-table.php:221
+#: flamingo/admin/includes/class-contacts-list-table.php:242
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:330
+#: flamingo/admin/includes/class-outbound-messages-list-table.php:214
 #, php-format
 msgid "%s ago"
-msgstr ""
+msgstr "%s siden"
 
-#: flamingo/admin/includes/class-contacts-list-table.php:248
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:341
-#: flamingo/admin/includes/class-outbound-messages-list-table.php:223
+#: flamingo/admin/includes/class-contacts-list-table.php:244
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:332
+#: flamingo/admin/includes/class-outbound-messages-list-table.php:216
 msgid "Y/m/d"
-msgstr ""
+msgstr "Y/m/d"
 
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:16
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:13
 msgid "Channel"
-msgstr ""
+msgstr "Kanal"
 
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:168
-#: flamingo/admin/includes/class-outbound-messages-list-table.php:140
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:160
+#: flamingo/admin/includes/class-outbound-messages-list-table.php:134
 msgid "Restore"
-msgstr ""
+msgstr "Gjenopprett"
 
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:172
-#: flamingo/admin/includes/class-outbound-messages-list-table.php:144
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:164
+#: flamingo/admin/includes/class-outbound-messages-list-table.php:138
 #: flamingo/admin/includes/meta-boxes.php:108
 #: flamingo/admin/includes/meta-boxes.php:209
 msgid "Delete Permanently"
-msgstr ""
+msgstr "Slett permanent"
 
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:174
-#: flamingo/admin/includes/class-outbound-messages-list-table.php:146
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:166
+#: flamingo/admin/includes/class-outbound-messages-list-table.php:140
 #: flamingo/admin/includes/meta-boxes.php:110
 #: flamingo/admin/includes/meta-boxes.php:211
 msgid "Move to Trash"
-msgstr ""
+msgstr "Flytt til papirkurv"
 
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:178
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:269
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:170
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:260
 msgid "Not Spam"
-msgstr ""
+msgstr "Ikke spam"
 
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:180
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:172
 msgid "Mark as Spam"
-msgstr ""
+msgstr "Marker som spam"
 
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:212
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:204
 msgid "View all channels"
-msgstr ""
+msgstr "Vis alle kanaler "
 
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:231
-#: flamingo/admin/includes/class-outbound-messages-list-table.php:164
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:223
+#: flamingo/admin/includes/class-outbound-messages-list-table.php:158
 msgid "Empty Trash"
-msgstr ""
+msgstr "Tøm papirkurv"
 
-#: flamingo/admin/includes/class-inbound-messages-list-table.php:275
+#: flamingo/admin/includes/class-inbound-messages-list-table.php:266
 #: flamingo/includes/class-inbound-message.php:32
 msgid "Spam"
-msgstr ""
+msgstr "Spam"
 
 #: flamingo/admin/includes/meta-boxes.php:17
 #, php-format
@@ -347,76 +348,78 @@ msgid ""
 "You are about to delete this contact '%s'\n"
 " 'Cancel' to stop, 'OK' to delete."
 msgstr ""
+"Du er i ferd med å slette kontakten '%s'\n"
+"\"Avbryt\" for å stoppe, \"OK\" for å slette."
 
 #: flamingo/admin/includes/meta-boxes.php:23
 msgid "Update Contact"
-msgstr ""
+msgstr "Oppdater kontakt"
 
 #: flamingo/admin/includes/meta-boxes.php:25
 msgid "Add Contact"
-msgstr ""
+msgstr "Legg til kontakt"
 
 #: flamingo/admin/includes/meta-boxes.php:69
 msgid "Separate tags with commas"
-msgstr ""
+msgstr "Seperer etiketter med komma"
 
 #: flamingo/admin/includes/meta-boxes.php:72
 msgid "Choose from the most used tags"
-msgstr ""
+msgstr "Velg fra mest brukte etiketter"
 
 #: flamingo/admin/includes/meta-boxes.php:122
 msgid "Update Message"
-msgstr ""
+msgstr "Oppdater meldinger"
 
 #: flamingo/admin/includes/meta-boxes.php:124
 msgid "Add Message"
-msgstr ""
+msgstr "Legg til melding"
 
 #: flamingo/admin/includes/meta-boxes.php:189
 msgid "Save Draft"
-msgstr ""
+msgstr "Lagre kladd"
 
 #: flamingo/admin/includes/meta-boxes.php:223
 msgid "Send Message"
-msgstr ""
+msgstr "Send melding"
 
 #: flamingo/includes/class-contact.php:20
 msgid "Flamingo Contacts"
-msgstr ""
+msgstr "Flamingo kontakter"
 
 #: flamingo/includes/class-contact.php:21
 msgid "Flamingo Contact"
-msgstr ""
+msgstr "Flamingo kontakt"
 
 #: flamingo/includes/class-contact.php:27
 msgid "Flamingo Contact Tags"
-msgstr ""
+msgstr "Flamingo kontakt etiketter"
 
 #: flamingo/includes/class-contact.php:28
 msgid "Flamingo Contact Tag"
-msgstr ""
+msgstr "Flamingo kontakt etikett"
 
 #: flamingo/includes/class-inbound-message.php:27
 msgid "Flamingo Inbound Message"
-msgstr ""
+msgstr "Flamingo innkommende melding"
 
 #: flamingo/includes/class-inbound-message.php:40
 msgid "Flamingo Inbound Message Channels"
-msgstr ""
+msgstr "Flamingo inkommende melding kanaler"
 
 #: flamingo/includes/class-inbound-message.php:41
 msgid "Flamingo Inbound Message Channel"
-msgstr ""
+msgstr "Flamingo inkommende melding kanal"
 
 #: flamingo/includes/class-inbound-message.php:168
 #: flamingo/includes/class-outbound-message.php:92
 msgid "(No Title)"
-msgstr ""
+msgstr "(Ingen tittel)"
 
 #: flamingo/includes/class-outbound-message.php:20
 msgid "Flamingo Outbound Messages"
-msgstr ""
+msgstr "Flamingo utgående meldinger"
 
 #: flamingo/includes/class-outbound-message.php:21
 msgid "Flamingo Outbound Message"
-msgstr ""
+msgstr "Flamingo utgående melding"
